--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <org.springframework.version>4.0.5.RELEASE</org.springframework.version>
-        <org.mybatis.version>3.2.7</org.mybatis.version>
+        <org.mybatis.version>3.2.8</org.mybatis.version>
         <org.mybatis.spring.version>1.2.2</org.mybatis.spring.version>
         <org.slf4j.version>1.7.7</org.slf4j.version>
         <ehcache.version>2.8.3</ehcache.version>
@@ -47,6 +47,21 @@
                 <groupId>commons-collections</groupId>
                 <artifactId>commons-collections</artifactId>
                 <version>3.2.1</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>3.3.2</version>
+            </dependency>
+            <dependency>
+                <groupId>org.mybatis</groupId>
+                <artifactId>mybatis</artifactId>
+                <version>${org.mybatis.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.mybatis</groupId>
+                <artifactId>mybatis-spring</artifactId>
+                <version>${org.mybatis.spring.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
