--- a/commons/pom.xml
+++ b/commons/pom.xml
@@ -9,6 +9,10 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
+    <prerequisites>
+        <maven>3.0.0</maven>
+    </prerequisites>
+
     <groupId>cn.kcn</groupId>
     <artifactId>archiver-commons</artifactId>
     <version>2.0-SNAPSHOT</version>
@@ -21,10 +25,6 @@
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>commons-collections</groupId>
-            <artifactId>commons-collections</artifactId>
-        </dependency>
         <dependency>
             <groupId>net.sf.ehcache</groupId>
             <artifactId>ehcache</artifactId>
