--- a/pom.xml
+++ b/pom.xml
@@ -12,16 +12,20 @@
         <module>commons</module>
     </modules>
 
+    <prerequisites>
+        <maven>3.0.0</maven>
+    </prerequisites>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <org.springframework.version>4.0.5.RELEASE</org.springframework.version>
+        <org.springframework.version>4.1.5.RELEASE</org.springframework.version>
         <org.mybatis.version>3.2.8</org.mybatis.version>
         <org.mybatis.spring.version>1.2.2</org.mybatis.spring.version>
-        <org.slf4j.version>1.7.7</org.slf4j.version>
-        <ehcache.version>2.8.3</ehcache.version>
+        <org.slf4j.version>1.7.10</org.slf4j.version>
+        <ehcache.version>2.9.1</ehcache.version>
         <logback.version>1.1.2</logback.version>
         <mongo.version>2.12.3</mongo.version>
+        <quartz.version>1.6.5</quartz.version>
         <urlrewritefilter.version>4.0.4</urlrewritefilter.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -29,7 +33,7 @@
 
     <repositories>
         <repository>
-            <id>kcnnexus</id>
+            <id>kcnnexus-deploy</id>
             <name>kcn nexus</name>
             <url>http://nexus.kcn.cn/content/repositories/releases/</url>
             <releases>
@@ -43,11 +47,11 @@
 
     <dependencyManagement>
         <dependencies>
-            <dependency>
-                <groupId>commons-collections</groupId>
-                <artifactId>commons-collections</artifactId>
-                <version>3.2.1</version>
-            </dependency>
+            <!--<dependency>-->
+                <!--<groupId>commons-collections</groupId>-->
+                <!--<artifactId>commons-collections</artifactId>-->
+                <!--<version>3.2.1</version>-->
+            <!--</dependency>-->
             <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-lang3</artifactId>
@@ -73,7 +77,7 @@
             <dependency>
                 <groupId>org.springframework.data</groupId>
                 <artifactId>spring-data-mongodb</artifactId>
-                <version>1.5.2.RELEASE</version>
+                <version>1.6.2.RELEASE</version>
             </dependency>
             <dependency>
                 <groupId>org.kbs</groupId>
@@ -100,7 +104,7 @@
             <dependency>
                 <groupId>org.opensymphony.quartz</groupId>
                 <artifactId>quartz</artifactId>
-                <version>1.6.1</version>
+                <version>${quartz.version}</version>
             </dependency>
             <dependency>
                 <groupId>javax.servlet</groupId>
@@ -124,11 +128,6 @@
                 <artifactId>ehcache</artifactId>
                 <version>${ehcache.version}</version>
             </dependency>
-            <dependency>
-                <groupId>commons-collections</groupId>
-                <artifactId>commons-collections</artifactId>
-                <version>3.2.1</version>
-            </dependency>
         </dependencies>
     </dependencyManagement>
     <dependencies>
@@ -140,7 +139,7 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.11</version>
+            <version>4.12</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -183,7 +182,7 @@
                     <groups>${testcase.groups}</groups>
                     <argLine>-Dfile.encoding=UTF-8</argLine>
                 </configuration>
-                <version>2.17</version>
+                <version>2.18.1</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -197,7 +196,7 @@
                         </resource>
                     </webResources>
                 </configuration>
-                <version>2.4</version>
+                <version>2.6</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -208,7 +207,7 @@
                     <encoding>UTF-8</encoding>
                     <compilerArgument>-Xlint:unchecked</compilerArgument>
                 </configuration>
-                <version>3.1</version>
+                <version>3.2</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -216,18 +215,38 @@
                 <configuration>
                     <encoding>UTF-8</encoding>
                 </configuration>
-                <version>2.6</version>
+                <version>2.7</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-clean-plugin</artifactId>
+                <version>2.6.1</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>2.8.2</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-install-plugin</artifactId>
+                <version>2.5.2</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-site-plugin</artifactId>
+                <version>3.4</version>
             </plugin>
         </plugins>
     </build>
     <distributionManagement>
         <repository>
-            <id>kcnnexus</id>
+            <id>kcnnexus-deploy</id>
             <name>kcn nexus</name>
             <url>http://nexus.kcn.cn/content/repositories/releases/</url>
         </repository>
         <snapshotRepository>
-            <id>kcnnexus</id>
+            <id>kcnnexus-deploy</id>
             <name>kcn nexus</name>
             <url>http://nexus.kcn.cn/content/repositories/snapshots/</url>
         </snapshotRepository>
