--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <version>2.0-SNAPSHOT</version>
     <modules>
         <module>commons</module>
+        <module>web</module>
     </modules>
 
     <prerequisites>
@@ -48,9 +49,9 @@
     <dependencyManagement>
         <dependencies>
             <!--<dependency>-->
-                <!--<groupId>commons-collections</groupId>-->
-                <!--<artifactId>commons-collections</artifactId>-->
-                <!--<version>3.2.1</version>-->
+            <!--<groupId>commons-collections</groupId>-->
+            <!--<artifactId>commons-collections</artifactId>-->
+            <!--<version>3.2.1</version>-->
             <!--</dependency>-->
             <dependency>
                 <groupId>org.apache.commons</groupId>
